rpg-docs/client/views/paperTemplates/dialogStack/dialogStack.css
.dialog-stack {
	z-index: 1;
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	visibility: visible;
	transition: visibility 0s linear;
}

.dialog-stack.hide {
	visibility: hidden;
  	transition: visibility 0s linear 400ms;
}

.dialog-stack .backdrop {
	background: #000;
	transform: translateZ(0);
	opacity: 0.4;
	transition: opacity 400ms linear;
}

.dialog-stack.hide .backdrop {
	opacity: 0;
	transition: opacity 200ms linear;
}

.dialog-stack .dialog-sizer {
	position: relative;
	height: 80%;
	width: 80%;
	max-width: 800px;
	max-height: 600px;
}

.dialog-stack app-toolbar {
	border-radius: 2px 2px 0 0;
}

@media (max-width: 640px) {
	.dialog-stack app-toolbar {
		border-radius: 0;
	}
}

@media (max-width: 640px) {
	.dialog-stack .dialog-sizer {
		width: 100%;
		height: 100%;
	    max-width: initial;
	    max-height: initial;
	}
	.dialog-stack .dialog {
		border-radius: 0;
	}
}

.dialog-stack .dialog {
	position: absolute;
	width: 100%;
	height: 100%;
	background: white;
	box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
				0 3px 14px 2px rgba(0, 0, 0, 0.12),
				0 5px 5px -3px rgba(0, 0, 0, 0.4);
	border-radius: 2px;
	transform-origin: top left;
	transition: top 400ms ease, left 400ms ease;
	z-index: 3;
	overflow: hidden;
}

.dialog-stack .dialog .testButton {
	height: 200px;
	width: 100px;
	background: red;
	border-radius: 30px;
}

.dialog-stack .dialog .form {
	padding: 24px;
}

.dialog-stack .dialog .buttons {
	padding: 8px 8px 8px 24px;
}

.dialog-stack .dialog img, .dialog-stack .dialog iron-image {
	max-width: 100%;
}

